--- a/MusicStore/MainMenu.xaml
+++ b/MusicStore/MainMenu.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="MainMenu" ResizeMode="NoResize" WindowState="Maximized" WindowStyle="None"
         Width="{x:Static SystemParameters.PrimaryScreenWidth}"
-        Height="{x:Static SystemParameters.PrimaryScreenHeight}">
+        Height="{x:Static SystemParameters.PrimaryScreenHeight}"
+        >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
@@ -30,6 +31,7 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
                     <Button Click="btnminimalize" Content="Minimize" Grid.Column="0" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" />
+                    
                     <Button Click="btnclose" Content="Close" Grid.Column="1" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" />
                 </Grid>
                 <Border x:Name="AccountDetailsBorder" BorderBrush="Black" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Stretch"  Grid.Row="1" VerticalAlignment="Stretch" Margin="10">
