--- a/MusicStore/register.xaml
+++ b/MusicStore/register.xaml
@@ -94,6 +94,8 @@
                         </Button.Template>
                     </Button>
                 </Grid>
+                <StackPanel>
+                </StackPanel>
             </Grid>
         </Border>
     </Border>
