--- a/MusicStore/App.xaml
+++ b/MusicStore/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Style/Startowy.xaml"/>
+                <ResourceDictionary Source="Style/Darkmode.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
