--- a/MusicStore/Style/Startowy.xaml
+++ b/MusicStore/Style/Startowy.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Darkmode.xaml"/>
+        <ResourceDictionary Source="Lightmode.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
