Wczytywanie configu z bazy i wysyłanie go do bazy

--- a/MusicStore/DebugWindow.xaml
+++ b/MusicStore/DebugWindow.xaml
@@ -11,6 +11,8 @@
         <Button Content="Załaduj Obraz" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="101" Height="23" Click="Button_Click"/>
         <Image x:Name="img" HorizontalAlignment="Left" Height="180" Margin="11,47,0,0" VerticalAlignment="Top" Width="180"/>
         <TextBox x:Name="imgid" HorizontalAlignment="Left" Height="23" Margin="116,233,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Nowy config" HorizontalAlignment="Left" Margin="196,47,0,0" VerticalAlignment="Top" Width="137" Height="46" Click="Button_Click_1"/>
+        <Button Content="Refresh config" HorizontalAlignment="Left" Margin="196,98,0,0" VerticalAlignment="Top" Width="137" Height="37" Click="Button_Click_2"/>
 
     </Grid>
 </Window>
