--- a/MusicStore/App.xaml
+++ b/MusicStore/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/Darkmode.xaml"/>
+                <ResourceDictionary Source="/Language/Polski.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
