--- a/MusicStore/Language/Chinese.xaml
+++ b/MusicStore/Language/Chinese.xaml
@@ -1,7 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:s="clr-namespace:System;assembly=mscorlib">
     <TextBlock x:Key="signin" Text="登入"/>
     <TextBlock x:Key="register" Text="登记"/>
     <TextBlock x:Key="createaccount" Text="创建一个帐户"/>
     <TextBlock x:Key="backtologin" Text="回到登入"/>
+    <s:String x:Key="LOGIN">登录</s:String>
+    <s:String x:Key="USERNAME">用户名</s:String>
+    <s:String x:Key="PASSWORD">密码</s:String>
+    <s:String x:Key="REGISTER">寄存器</s:String>
+    <s:String x:Key="NEWLOGIN">用户名</s:String>
+    <s:String x:Key="NEWPASSWORD">密码</s:String>
+    <s:String x:Key="REPEATNEWPASSWORD">重复输入密码</s:String>
+    <s:String x:Key="NEWPAYMENT">信用卡号码</s:String>
 </ResourceDictionary>
