dynamiczna zmiana jezykow

--- a/MusicStore/DebugWindow.xaml
+++ b/MusicStore/DebugWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicStore"
         mc:Ignorable="d"
-        Title="DebugWindow" Height="295.753" Width="635.656">
+        Title="DebugWindow" Height="417.253" Width="635.656">
     <Grid>
         <Button Content="Zmień styl" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="323" Height="32" Click="Style_Click"/>
         <Button Content="Załaduj Obraz" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="101" Height="23" Click="Button_Click"/>
@@ -24,6 +24,7 @@
             </ListView>
         </ScrollViewer>
         <Button Content="Pobierz Biblioteke" HorizontalAlignment="Left" Margin="514,10,0,0" VerticalAlignment="Top" Width="103" Height="32" Click="Button_Click_3"/>
+        <ComboBox x:Name="jezykbox" HorizontalAlignment="Left" Margin="10,261,0,0" VerticalAlignment="Top" Width="265" Height="35" SelectionChanged="Jezykbox_SelectionChanged"/>
 
     </Grid>
 </Window>
